# SL

./: .gitignore  README.md  pyproject.toml
SL/: inference.ipynb  model_info.ipynb  modules.py  train.py
SL/configs/: fineweb_max_7.yaml  fineweb_transformer_max_v8.yaml  template_config.yaml  tiny_shakespeare.yaml  tinystories_small_5.yaml
SL/data/: dataset_preprocessing.py  dataset_visualization.py
SL/data/tiny_shakespeare_preprocessed/: dataset_info.json  state.json
SL/runs/fineweb_transfomer_max_v8/: events.out.tfevents.1759423470.PC.446417.0  events.out.tfevents.1764245728.PC.127207.0  events.out.tfevents.1764246177.PC.142284.0  events.out.tfevents.1764253510.PC.252998.0
SL/tokenizers/: TinyStories_tokenizer.json  TinyStories_tokenizer_2.json  TinyStories_tokenizer_3.json  fineweb_tokenizer.json  fineweb_tokenizer_2.json  fineweb_tokenizer_3.json  tiny_shakespeare_tokenizer.json  tokenizer_from_dataset.py
SL/utils/: rename_weights.py
